--- a/webapp/include/navigation.jspf
+++ b/webapp/include/navigation.jspf
@@ -1,3 +1,6 @@
+<%@ page contentType="text/html;charset=UTF-8" language="java" %>
+<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core"%>
+
 <nav class="navbar navbar-expand-md navbar-dark bg-dark" aria-label="Fourth navbar example">
     <div class="container-fluid">
         <a class="navbar-brand" href="/"> KUIT </a>
@@ -6,6 +9,7 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarsExample04">
+
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-bs-toggle="dropdown" aria-expanded="false">Home</a>
@@ -21,3 +25,31 @@
         </div>
     </div>
 </nav>
+
+<div class="navbar-default">
+    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+        <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+            <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
+        </a>
+
+        <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+            <li><a href="/home.jsp" class="nav-link px-2 link-secondary">Q&A</a></li>
+            <li><a href="#" class="nav-link px-2 link-dark">FAQs</a></li>
+            <li><a href="/user/userList" class="nav-link px-2 link-dark">User List</a></li>
+            <li><a href="#" class="nav-link px-2 link-dark">About</a></li>
+        </ul>
+
+        <div class="col-md-3 text-end">
+            <c:choose>
+                <c:when test="${not empty sessionScope.user}">
+                    <a href="/user/logout" role="button" class="btn btn-outline-primary me-2">Log-Out</a>
+                    <a href="/user/updateForm?userId=${sessionScope.user.userId}" role="button" class="btn btn-primary" >개인정보수정</a>
+                </c:when>
+                <c:otherwise>
+                    <a href="/user/login.jsp" type="button" class="btn btn-outline-primary me-2">Log-In</a>
+                    <a href="/user/form.jsp" type="button" class="btn btn-primary">Sign-up</a>
+                </c:otherwise>
+            </c:choose>
+        </div>
+    </header>
+</div>
