--- a/webapp/include/navigation.jspf
+++ b/webapp/include/navigation.jspf
@@ -1,3 +1,5 @@
+<%@ page contentType="text/html;charset=UTF-8" language="java" %>
+
 <nav class="navbar navbar-expand-md navbar-dark bg-dark" aria-label="Fourth navbar example">
     <div class="container-fluid">
         <a class="navbar-brand" href="/"> KUIT </a>
@@ -38,7 +40,7 @@
             <c:choose>
                 <c:when test="${not empty sessionScope.user}">
                     <a href="/user/logout" role="button" class="btn btn-outline-primary me-2">Log-Out</a>
-                    <a href="/user/updateForm?userId=${sessionScope.user.userId}" role="button" class="btn btn-primary" >Update-Info</a>
+                    <a href="/user/updateForm?userId=${sessionScope.user.userId}" role="button" class="btn btn-primary" >개인정보수정</a>
                 </c:when>
                 <c:otherwise>
                     <a href="/user/login" type="button" class="btn btn-outline-primary me-2">Log-In</a>
